--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				<div class="row justify-content-center mb-5">
 					<div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
 						<span class="subheading mb-2 d-inline-block">Stunning projects from amazing clients</span>
-						<h2 class="mb-4">Our Portfolio</h2>
+						<h2 class="mb-4">My Portfolio</h2>
 					</div>
 				</div>
 
@@ -187,13 +187,13 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-								<a href="https://cdn.dribbble.com/userupload/14108851/file/original-d5c0a52a106223ada4f15f11095396ff.png?resize=1024x1024"
+								<a href="./images/work_1.jpg"
 									class="media-1 glightbox">
 									<img
-										src="https://cdn.dribbble.com/userupload/14108851/file/original-d5c0a52a106223ada4f15f11095396ff.png?resize=1024x1024"
+										src="./images/work_1.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Collaborator</h2>
+										<h2>Wonderland Travel Agency</h2>
 										<span class="category">Web Application</span>
 									</div>
 								</a>
