--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-								<a href="https://cdn.dribbble.com/userupload/5413567/file/original-fbf79c86c63351b41b27ff1a6c22871a.png?resize=1024x768&vertical=center"
+								<a href="images/work_2.jpg"
 									class="media-1 glightbox">
 									<img
-										src="https://cdn.dribbble.com/userupload/5413567/file/original-fbf79c86c63351b41b27ff1a6c22871a.png?resize=1024x768&vertical=center"
+										src="images/work_2.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Brainware</h2>
-										<span class="category">Responsive E-Learning Platform</span>
+										<h2>Stunning UI/UX</h2>
+										<span class="category">Responsive Portfolios</span>
 									</div>
 								</a>
 							</div>
