--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
 							</div>
 
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-								<a href="https://cdn.dribbble.com/userupload/16192537/file/original-d4b202301df3380a001f1e60006b8a5c.png?resize=1024x768"
+								<a href="images/work_4.webp"
 									class="media-1 glightbox">
-									<img src="https://cdn.dribbble.com/userupload/16192537/file/original-d4b202301df3380a001f1e60006b8a5c.png?resize=1024x768"
+									<img src="images/work_4.webp"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
 										<h2>Love Sports</h2>
@@ -230,9 +230,9 @@
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-								<a href="https://cdn.dribbble.com/userupload/15268018/file/original-c983b34bee9e534cf554196e44d07590.jpg?resize=1024x768"
+								<a href="images/work_5.jpg"
 									class="media-1 glightbox">
-									<img src="https://cdn.dribbble.com/userupload/15268018/file/original-c983b34bee9e534cf554196e44d07590.jpg?resize=1024x768"
+									<img src="images/work_5.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
 										<h2>Uniqum</h2>
