--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@
 									<img src="images/work_5.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Uniqum</h2>
+										<h2>Martella Restaurent</h2>
 										<span class="category">Modern Logo Design</span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-								<a href="https://cdn.dribbble.com/users/2254639/screenshots/15126110/media/6973ab18649a032de296fa670820a006.jpg"
+								<a href="images/work_6a.jpg"
 									class="media-1 glightbox">
-									<img src="https://cdn.dribbble.com/users/2254639/screenshots/15126110/media/6973ab18649a032de296fa670820a006.jpg"
+									<img src="images/work_6.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Upscale</h2>
-										<span class="category">Graphic Design</span>
+										<h2>Pentagon</h2>
+										<span class="category">Professional Business Flyers</span>
 									</div>
 								</a>
 							</div>
