--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 				<div class="row justify-content-center mb-5">
 					<div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
 						<span class="subheading mb-2 d-inline-block">Stunning projects from amazing clients</span>
-						<h2 class="mb-4">My Portfolio</h2>
+						<h2 class="mb-4">Our Portfolio</h2>
 					</div>
 				</div>
 
