--- a/portfolio.html
+++ b/portfolio.html
@@ -113,53 +113,48 @@
 		<!-- Portfolio -->
 		<section class="section">
 			<div class="container">
-
+				<div class="row justify-content-center mb-5">
+					<div class="col-lg-6 text-center" data-aos="fade-up" data-aos-delay="100">
+						<span class="subheading mb-2 d-inline-block">Stunning projects from amazing clients</span>
+						<h2 class="mb-4">Our Portfolio</h2>
+					</div>
+				</div>
 
 				<div class="row">
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-								<a href="https://cdn.dribbble.com/userupload/14108851/file/original-d5c0a52a106223ada4f15f11095396ff.png?resize=1024x1024"
-									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/userupload/14108851/file/original-d5c0a52a106223ada4f15f11095396ff.png?resize=1024x1024"
-										alt="Image" class="img-fluid">
+								<a href="./images/work_1.jpg" class="media-1 glightbox">
+									<img src="./images/work_1.jpg" alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Collaborator</h2>
+										<h2>Wonderland Travel Agency</h2>
 										<span class="category">Web Application</span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-								<a href="https://cdn.dribbble.com/userupload/5413567/file/original-fbf79c86c63351b41b27ff1a6c22871a.png?resize=1024x768&vertical=center"
-									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/userupload/5413567/file/original-fbf79c86c63351b41b27ff1a6c22871a.png?resize=1024x768&vertical=center"
-										alt="Image" class="img-fluid">
+								<a href="images/work_2.jpg" class="media-1 glightbox">
+									<img src="images/work_2.jpg" alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Brainware</h2>
-										<span class="category">Responsive E-Learning Platform</span>
+										<h2>Stunning UI/UX</h2>
+										<span class="category">Responsive Portfolios</span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
-								<a href="https://cdn.dribbble.com/userupload/9004622/file/original-5e4c3380169aa93cccebf51bf9181aec.png?resize=1024x768&vertical=center"
-									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/userupload/9004622/file/original-5e4c3380169aa93cccebf51bf9181aec.png?resize=1024x768&vertical=center"
-										alt="Image" class="img-fluid">
+								<a href="images/work_3.png" class="media-1 glightbox">
+									<img src="images/work_3.png" alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Shoppers</h2>
-										<span class="category">E-Commerce Web Application</span>
+										<h2>Travellers</h2>
+										<span class="category">E-Booking Web Application</span>
 									</div>
 								</a>
 							</div>
 
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
-								<a href="https://cdn.dribbble.com/userupload/16192537/file/original-d4b202301df3380a001f1e60006b8a5c.png?resize=1024x768"
+								<a href="images/work_4.webp"
 									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/userupload/16192537/file/original-d4b202301df3380a001f1e60006b8a5c.png?resize=1024x768"
+									<img src="images/work_4.webp"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
 										<h2>Love Sports</h2>
@@ -168,26 +163,24 @@
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-								<a href="https://cdn.dribbble.com/userupload/15268018/file/original-c983b34bee9e534cf554196e44d07590.jpg?resize=1024x768"
+								<a href="images/work_5.jpg"
 									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/userupload/15268018/file/original-c983b34bee9e534cf554196e44d07590.jpg?resize=1024x768"
+									<img src="images/work_5.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Uniqum</h2>
+										<h2>Martella Restaurent</h2>
 										<span class="category">Modern Logo Design</span>
 									</div>
 								</a>
 							</div>
 							<div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
-								<a href="https://cdn.dribbble.com/users/2254639/screenshots/15126110/media/6973ab18649a032de296fa670820a006.jpg"
+								<a href="images/work_6a.jpg"
 									class="media-1 glightbox">
-									<img
-										src="https://cdn.dribbble.com/users/2254639/screenshots/15126110/media/6973ab18649a032de296fa670820a006.jpg"
+									<img src="images/work_6.jpg"
 										alt="Image" class="img-fluid">
 									<div class="media-1-content">
-										<h2>Upscale</h2>
-										<span class="category">Graphic Design</span>
+										<h2>Pentagon</h2>
+										<span class="category">Professional Business Flyers</span>
 									</div>
 								</a>
 							</div>
