--- a/about.html
+++ b/about.html
@@ -143,8 +143,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-7">
-					<span class="subheading d-inline-block mb-2">Team</span>
-					<h2 class="mb-4">Meet Our Team</h2>
+					<span class="subheading d-inline-block mb-2">The great man behind the great work</span>
+					<h2 class="mb-4">Meet Me</h2>
 				</div>
 			</div>
 
@@ -152,30 +152,14 @@
 				<div class="col-lg-3">
 					<a href="#" class="grayscale">
 						<img src="images/person_6.jpg" alt="Image" class="img-fluid mb-4">
-						<span class="subheading d-inline-block">Founder</span>
+						<span class="subheading d-inline-block">UI/UX, Graphic &amp; web Developer</span>
 						<h3 class="h5 mb-3">Arsene Djumbe</h3>
 						<!-- <p class="text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
 							Consonantia, there live the blind texts.</p> -->
 					</a>
 				</div>
-				<div class="col-lg-3">
-					<a href="#" class="grayscale">
-						<img src="images/person_8.jpg" alt="Image" class="img-fluid mb-4">
-						<span class="subheading d-inline-block">Sales Manager</span>
-						<h3 class="h5 mb-3">Lois</h3>
-						<!-- <p class="text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
-							Consonantia, there live the blind texts.</p> -->
-					</a>
-				</div>
-				<div class="col-lg-3">
-					<a href="#" class="grayscale">
-						<img src="images/person_7.png" alt="Image" class="img-fluid mb-4">
-						<span class="subheading d-inline-block">Product Manager</span>
-						<h3 class="h5 mb-3">David</h3>
-						<!-- <p class="text-muted">Far far away, behind the word mountains, far from the countries Vokalia and
-							Consonantia, there live the blind texts.</p> -->
-					</a>
-				</div>
+
+				
 
 			</div>
 		</div>
