--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
 				<div class="col-lg-8">
 					<div class="row">
 						<div class="col-6 col-lg-6 mt-5" data-aos="fade-up" data-aos-delay="100">
-							<img src="images/logo.jpeg" alt="Image" class="img-fluid rounded">
+							<img src="images/logo.jpeg" alt="Logo" class="img-fluid rounded">
 						</div>
 						<div class="col-6 col-lg-6" data-aos="fade-up" data-aos-delay="200">
 							<img
