--- a/gallery.html
+++ b/gallery.html
@@ -237,6 +237,16 @@
 	<!-- <script src="js/aos.js"></script> -->
 
 	<script src="js/custom-testimony.js"></script>
+
+
+	<style>
+		.img_contain {
+			object-fit: contain;
+			box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.253);
+			border-radius: 2%;
+			border: 2px solid rgba(99, 121, 129, 0.479);
+		}
+	</style>
 </body>
 
 </html>
