--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 				<a href="index.html" class="logo m-0">Native</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end">
-					<li class="l"><a href="index.html">Home</a></li>
+					<li class="l"><a href="gallery.html">Creative Gallery</a></li>
 					<!-- <li class="has-children">
 						<a href="#">Dropdown</a>
 						<ul class="dropdown">
@@ -68,7 +68,7 @@
 					<li class="l"><a href="services.html">Services</a></li>
 					<li class="l"><a href="portfolio.html">Portfolio</a></li>
 					<li class="l"><a href="about.html">About</a></li>
-					<li class="l"><a href="contact.html">Contact</a></li>
+					<li class="l"><a href="index.html">Home</a></li>
 				</ul>
 
 				<div class="burger ms-auto float-end site-menu-toggle mt-2 js-menu-toggle d-inline-block d-lg-none light"
