--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<a href="index.html" class="logo m-0">Native</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end">
-					<li class="l"><a href="index.html">Home</a></li>
+					<li class="l"><a href="gallery.html">Creative Gallery</a></li>
 					<!-- <li class="has-children">
 						<a href="#">Dropdown</a>
 						<ul class="dropdown">
