--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
 				<a href="index.html" class="logo m-0">Native</a>
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-end">
-					<li class="l"><a href="index.html">Home</a></li>
+					<li class="l"><a href="gallery.html">Creative Gallery</a></li>
 					<!-- <li class="has-children">
 						<a href="#">Dropdown</a>
 						<ul class="dropdown">
@@ -65,7 +65,7 @@
 							<li><a href="#">Menu Three</a></li>
 						</ul>
 					</li> -->
-					<li class="l"><a href="services.html">Services</a></li>
+					<li class="l"><a href="index.html">Home</a></li>
 					<li class="l"><a href="portfolio.html">Portfolio</a></li>
 					<li class="l"><a href="about.html">About</a></li>
 					<li class="l"><a href="contact.html">Contact</a></li>
